# lazy_foo_sdl

./: CMakeLists.txt  main.cpp
lsdl/: object_deleter.hpp  object_ptr.hpp
